--- a/style/style.css
+++ b/style/style.css
@@ -13,12 +13,11 @@ a {text-decoration: none;}
 header {
 	padding: 20px 0 30px 0;
 }
+header .mob__menu { display: none;}
 header div.flex .fa-bars { display: none;}
 header .mobile__shoping { display: none;}
 header img.header__logo { width: 250px;}
-header form {
-	position: relative;
-}
+header form {position: relative;}
 header form .fa-chevron-down {
 	font-size: 19px;
 	color: #d9d9d9;
@@ -40,7 +39,6 @@ header form select {
 	appearance: none;
 	-webkit-appearance: none;
 }
-
 header form input {
 	height: 40px;
     width: 210px;
@@ -51,7 +49,6 @@ header form input {
     font-size: 15px;
     color: #888888;
 }
-
 header form button {
 	position: absolute;
 	top: 50%;
@@ -61,7 +58,6 @@ header form button {
 	border: none;
 }
 header form button .fa-search {color:#d9d9d9; }
-
 header form button i {
 	font-size: 22px;
 	color:#8c8c8c;
@@ -69,13 +65,11 @@ header form button i {
 
     transform: translateY(-50%); 
 }
-
 header .header__address {
 	font-size: 15px;
 	font-weight: 500;
 	color: #8c8c8c;
 }
-
 header .header__address address {font-style: normal;}
 header .header__address .fa-map-marker-alt,
 header .header__phone .fa-phone-alt {
@@ -83,16 +77,13 @@ header .header__phone .fa-phone-alt {
     margin-right: 10px;
     color: #8c8c8c;
 }
-
 header .header__phone{ margin-right: 20px;}
 header .header__phone .header__login { display: none;}
-
 header .header__phone div {
 	font-size: 15px;
 	font-weight: 500;
 	color: #8c8c8c;
 }
-
 header .header__shoping a.header__cart {
 	background-color: #fff;
 	border-radius: 100%;
@@ -101,7 +92,6 @@ header .header__shoping a.header__cart {
     align-items: center;
 }
 header .header__shoping .header__cart img { padding: 10px; }
-
 header .header__shoping .header__user button {
 	outline: none;
 	font-size: 25px;
@@ -116,9 +106,7 @@ header .header__shoping .header__user button {
 	cursor: pointer;
 }
 header .header__shoping .header__user button img { padding: 10px 12px;}
-
 header .header__shoping .header__user { position: relative;} 
-
 header .header__shoping .header__user .user__login {
 	position: absolute;
 	top: -7px;
@@ -126,7 +114,6 @@ header .header__shoping .header__user .user__login {
 	display: none;
 }
 header .header__shoping .header__user:hover > .user__login { display: block;}
-
 header .header__shoping .header__user .user__login button.user__in {
 	width: 137px;
 	height: 29px;
@@ -155,7 +142,6 @@ header .header__shoping .header__user .user__login button.user__registration:hov
 	background: #82C166;
 	color: #fff;
 }
-
 header .header__shoping { position: relative; }
 header .header__shoping i.label {
 	display: block;
@@ -209,11 +195,7 @@ main h1 {
 	text-align: center;
 	color: #666666;
 }
-
-main .main__logo {
-	margin: 35px auto 45px;
-}
-
+main .main__logo {margin: 35px auto 45px;}
 main .logo__text {
 	margin-top: 10px;
 	text-align: center;
@@ -241,7 +223,6 @@ main .main__logo a:hover .fa-chevron-down,
 main .main__logo a:active .fa-chevron-down{
 	color: #82C166;
 }
-
 
 
 /*                        cars__detal                           */
@@ -278,7 +259,6 @@ main section.cars__base .base__detal:hover .detal__text{ color: #82C166; }
  /*                        Main_Carousel                               */
 
 main .slick__main .draggable { border-radius: 5px;}
-
 main #main__slick .slick-dots {
 	position: absolute;
 	bottom: -35px;
@@ -299,7 +279,6 @@ main #main__slick .slick-dots li {
 }
 main #main__slick .slick-dots li.slick-active { background: #7cbe49; }
 main #main__slick .slick-dots li button { display: none; }
-
 main #main__slick .slick-prev {
   background: url('icons/left-arrow.png') center center / cover no-repeat;
   font-size: 0px;
@@ -345,7 +324,6 @@ main section.sale a {
 	text-align: center;
 	color: #8c8c8c;
 }
-
 main section.sale .sale__nav a:before {
 	content: "";
 	display: block;
@@ -365,7 +343,6 @@ main section.sale .sale__nav a:active::before {
 }
 
 
-
 /*                                                          Sale Card                                           */
 
 
@@ -379,7 +356,6 @@ section.sale .sale__wrrap .sale__card {
 	min-height: 541px;
 	margin-bottom: 80px;
 }
-
 section.sale .sale__wrrap .sale__card {
 	border: 2px solid transparent;
 	border-radius: 10px;
@@ -427,15 +403,12 @@ section.sale .sale__wrrap .sale__card .card__img i.new__label {
 	border-radius: 0 50px 50px 0;
 	background-color: #ff5205;
 }
-
-
 section.sale .sale__wrrap .sale__card .card__img {
 	width: 100%;
 	height: 240px;
 	background-color: #fff;
 	border-radius: 5px;
 }
-
 .card__rating .rating:not(:checked) > input {
     position:absolute;
     top:-9999px;
@@ -483,7 +456,6 @@ section.sale .sale__wrrap .sale__card .rating__comment i.rating__lebel {
   margin-right: 11px;
   font-style: normal;
 }
-
 section.sale .sale__wrrap .sale__card .card__text {
 	height: 100px;
 	display: table-cell;
@@ -556,7 +528,6 @@ section.sale .sale__wrrap .sale__card .check__number span.plus {
 }
 
 
-
 /*                                                 cart modal                                                   */
 
 section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal {
@@ -608,7 +579,6 @@ section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal .modal__phone
 	text-align: center;
 	color: #2d3b40;
 }
-
 section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal span {
 	display: block;
 	font-size: 18px;
@@ -631,7 +601,6 @@ section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal button.modal_
 	color: #ffffff;
 	cursor: pointer;
 }
-
 section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal button.cart__hiden {
 	width: 34px;
 	height: 34px;
@@ -652,7 +621,6 @@ section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal button.cart__
 .cart__modal-show {
 	display: block;
 }
-
 
 /*                                                cart form                                           */
 
@@ -680,7 +648,6 @@ section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal .cart__form .
   	color: #2d3b40;
   	margin-top: 15px;
 }
-
 section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal .cart__form input {
 	width: 100%;
 	height: 30px;
@@ -709,9 +676,7 @@ section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal .cart__form .
 	margin-top: 30px;
 }
 
-
 /*                                           cart form                                            */
-
 
 
 /*                                 cart modal                                               */
@@ -804,7 +769,6 @@ footer .footer__info h5 {
 	color: #666666;
 	margin-bottom: 20px;
 }
-
 footer .footer__info .footer__account a,
 footer .footer__info .footer__information a,
 footer .footer__info .footer__shop a {
@@ -818,7 +782,6 @@ footer .footer__info .footer__shop a {
 	cursor: pointer;
 	padding-bottom: 10px;
 }
-
 footer .footer__info .footer__contacts .fa-map-marker-alt {
 	font-size: 28px;
 	color: #bfbfbf;
@@ -853,7 +816,6 @@ footer .footer__subtitle .subtitle__text span {
 	margin-left: 20px;
 }
 footer .footer__subtitle .subtitle__link img.webspirit__img { width: 39px; }
-
 footer .footer__subtitle .subtitle__link p {
 	margin-left: 11px;
 	font-size: 12px;
@@ -953,19 +915,8 @@ footer .footer__subtitle .subtitle__link img.genetka {
 	header nav a {
 		font-size: 14px;
 	}
-	header .header__shoping i.label {
-		left: -30px;
-		font-size: 13px;
-		line-height: 1.1;
-		height: 15px;
-		width: 40px;
-	}
 	header nav a:before {
 		width: 155px;
-	}
-	main h1 {
-		font-size: 35px;
-		letter-spacing: 2px;
 	}
 	main section.sale .sale__nav a:before {
 		min-width: 190px;
@@ -974,10 +925,39 @@ footer .footer__subtitle .subtitle__link img.genetka {
 }
 @media screen and (max-width: 1025px) {
 	header .header__address {display: none; }
-	/* header nav a:before { min-width: 155px; } */
 	main section.cars__base .base__detal { width: 141px; }
 	main section.cars__base .base__detal img { width: 90%; }
 	footer .footer__info { padding-left: 15px; padding-right: 15px;}
+	section.sale .sale__wrrap .sale__card { width:20%; }
+	section.sale .sale__wrrap .sale__card .card__img { height: 200px; }
+	.card__rating .rating:not(:checked) > label {font-size: 17px;}
+	section.sale .sale__wrrap .sale__card .card__info .info__article { margin-right: 15px; }
+	section.sale .sale__wrrap .sale__card .card__price .price__text {font-size: 25px;}
+	section.sale .sale__wrrap .sale__card .card__price button.cart__buy {
+		width: 70px;
+		height: 30px;
+	}
+	section.sale .sale__wrrap .sale__card.no_availabilaty .card__price .price__text {font-size: 15px; }
+	section.sale .sale__wrrap .sale__card.no_availabilaty button.cart__order {
+		width: 70px;
+		height: 30px;
+		margin-top: 12px;
+	}
+	section.sale .sale__wrrap .sale__card .card__price button.cart__buy:hover:after,
+	section.sale .sale__wrrap .sale__card.no_availabilaty button.cart__order:hover:after {display: none;}
+	section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal h5 {font-size: 25px;}
+	section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal p { margin-top: 10px; }
+	section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal .modal__name {margin-top: 10px;}
+	section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal .modal__product {margin-bottom: 10px;}
+	section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal .modal__phone a {font-size: 17px;}
+	section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal span {font-size: 16px;}
+	section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal button.modal__request {font-size: 16px;}
+	section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal {height: 425px;}
+	section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal .cart__form {padding: 5px 10px 31px 10px;}
+	section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal .cart__form .form__product {margin-top: 10px;}
+	section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal .cart__form input {margin-top: 10px;}
+
+
 }
 @media screen and (max-width: 769px) {
 	header form select,
@@ -1019,7 +999,6 @@ footer .footer__subtitle .subtitle__link img.genetka {
 	section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal .cart__form {padding: 5px 10px 31px 10px;}
 	section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal .cart__form .form__product {margin-top: 10px;}
 	section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal .cart__form input {margin-top: 10px;}
-
 	footer .footer__info .footer__contacts address {margin-left: 7px;}
 	footer .footer__info .footer__contacts .contacts__phone a { margin-left: 7px;}
 	footer .footer__info div.w20 { width: 25%; }
@@ -1075,7 +1054,6 @@ footer .footer__subtitle .subtitle__link img.genetka {
 		background-color: #82C166;
 	}
 	header .mobile__shoping .header__cart img { padding: 10px; }
-
 	header div.flex .fa-bars { 
 		display: block;
 		width: 35px;
@@ -1084,20 +1062,18 @@ footer .footer__subtitle .subtitle__link img.genetka {
 		float: left;
 		color: #8c8c8c;
 	}
-
 	header .header__address .fa-map-marker-alt, header .header__phone .fa-phone-alt { display: none;}
-
 	header nav.flex { display: none;}
-
+	header form { width: 100%;}
 	header form input { 
-		width: 270px;
+		width: 100%;
 		margin-top: 10px;
+		margin-left: 0;
 	}
-
 	header .header__phone { order: -1;}
 	header .header__phone {
 		width: calc(100% + 30px);
-		padding: 10px 15px 0 15px;
+		padding: 5px 15px 5px 15px;
 		margin: 0px;
 		margin-bottom: 10px;
 		background: #8c8c8c;
@@ -1109,25 +1085,18 @@ footer .footer__subtitle .subtitle__link img.genetka {
 		font-weight: 600;
 		text-align: left;
 	}
-
 	header .header__phone div {
 		color: #F2F2F2;
 		display: flex;
 	}
-
 	header .header__phone div a { margin-right: 15px;}
-
 	header .header__phone .header__login {
 		 display: flex;
 		 flex-direction: column;
-		}
-
+	}
 	main section.sale .sale__nav { display: none;}
-
 	section.sale .sale__wrrap .sale__card { width: 50%; }
-
 	main .main__logo a img {height: 35px;}
-
 	main h1 {
 		font-size: 23px;
 		letter-spacing: 1px;
@@ -1139,19 +1108,19 @@ footer .footer__subtitle .subtitle__link img.genetka {
 	main .main__logo a:nth-child(4) {margin-right: 10px;}
 	main .logo__text {font-size: 13px;}
 	section.sale .sale__wrrap .sale__card.no_availabilaty button.cart__order { margin-top: 11px; }
-
-
+	footer .footer__info .footer__shop,
+	footer .footer__info .footer__information { display: none;}
+	footer .footer__info .footer__contacts .contacts__address,
+	footer .footer__info .footer__contacts .contacts__phone { justify-content: center;}
+	footer .footer__info div.w20 {
+		width: 100%;
+	}
 	footer .footer__info {padding: 10px 15px;}
-	footer .footer__info div.w20 { width: 50%; }
 	footer .footer__info h5 { 
 		margin-top: 10px;
     	margin-bottom: 5px;
 		text-align: center; 
 	}
-	footer .footer__info .footer__account a,
-	footer .footer__info .footer__information a,
-	footer .footer__info .footer__shop a { text-align: center; }
-	footer .footer__info .footer__contacts .contacts__address { margin-bottom: 7px;}
 	footer .footer__info .footer__payments .payments__img { 
 		text-align: center;
 		margin-top: 10px;
@@ -1160,6 +1129,65 @@ footer .footer__subtitle .subtitle__link img.genetka {
 	footer .footer__subtitle {
 		min-height: 40px;
 		padding: 10px 0;
+	}
+	header div.mob__menu {
+		display: block;
+    	position: fixed;
+		z-index: 1002;
+		margin-left: -15px;
+    	top: 0;
+    	width: 100vw;
+    	background: rgba(0,0,0,.8);
+	}
+	header div.mob__menu .close__menu {
+		transition: .54s;
+    	width: 100%;
+		height: 100vh;
+		display: none;
+    	position: fixed;
+    	background: rgba(0,0,0,.8);
+	}
+	header div.mob__menu .close__menu .fa-times {
+		position: absolute;
+		right: 20px;
+		top: 20px;
+		font-size: 24px;
+		color: #fff;
+	}
+	header div.mob__menu .mob__nav {
+		transition: .54s;
+		left: -281px;
+		position: absolute;
+		background: #3c3c3a;
+		width: 280px;
+		min-height: 100vh;
+	}
+	header div.mob__menu .mob__nav a {
+		font-size: 16px;
+    	padding: 8px 10px;
+    	margin: -1px 15px;
+    	color: #fff;
+    	width: calc(100% - 30px);
+   		display: block;
+	}
+	header div.mob__menu .mob__nav a img.mob__logo {
+		width: calc(100% - 30px);
+    	max-width: 200px;
+		margin: 15px 0;
+	}
+	header div.mob__menu .mob__nav .mob__border {
+		margin: 3px 0;
+    	height: 1px;
+    	background: #777;
+    	width: 100%;
+    	display: block;
+	}
+	header div.nav__mobile.default {
+		position: fixed;
+		top: 0;
+		padding: 15px;
+		background: #777;
+		z-index: 11;
 	}
 }
 
@@ -1196,11 +1224,5 @@ footer .footer__subtitle .subtitle__link img.genetka {
 		margin-top: 15px;
 		justify-content: center;
 	}
-	footer .footer__info .footer__shop,
-	footer .footer__info .footer__information { display: none;}
-	footer .footer__info .footer__contacts .contacts__address,
-	footer .footer__info .footer__contacts .contacts__phone { justify-content: center;}
-	footer .footer__info div.w20 {
-		width: 100%;
-	}
+	
 }
